infrastructure/argocd/configs/argocd-server/reference-grant.yaml
# Permite que HTTPRoutes no namespace gateway-api referenciem
# o Service argocd-server neste namespace (gateway API cross-namespace routing)
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway-api
  to:
    - group: ""
      kind: Service
      name: argocd-server
